--- a/app/src/main/res/layout/nested_scrollview_demo.xml
+++ b/app/src/main/res/layout/nested_scrollview_demo.xml
@@ -13,7 +13,7 @@
         android:gravity="center_horizontal"
         >
 
-        <android.support.v4.widget.NestedScrollView
+        <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scrollview_root"
             android:layout_width="match_parent"
             android:layout_height="180dp"
@@ -27,7 +27,7 @@
                 android:textSize="19sp"
                 android:textStyle="bold"
                 />
-        </android.support.v4.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
 
         <include layout="@layout/scrollview_vertical_item"/>
         <include layout="@layout/scrollview_vertical_item"/>
